<resources>
    <string name="app_name">境辉环保</string>
    <string name="noise">噪声扬尘在线</string>
    <string name="monitor">监测系统</string>
    <string name="inputaccount">请输入账号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="input">登陆</string>
    <string name="reset">重置</string>
    <string name="observation">监测地点\t:</string>
    <string name="maps">地图</string>
    <string name="history_data">历史数据</string>
    <string name="statement">报表</string>
    <string name="starttime">起始时间\t:</string>
    <string name="endtime">结束时间\t:</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="town">乡镇办（请选择详细地址）</string>
    <string name="site">建设工地（请选择详细地址）</string>
    <string name="dust">扬尘</string>
    <string name="wind_speed">风速</string>
    <string name="wind_direction">风向</string>
    <string name="air_pressure">气压</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="date_time">日期时间</string>
    <string name="pm2.5">PM2.5\n(ug/m3)</string>
    <string name="pm10">PM10\n(ug/m3) </string>
    <string name="averge_windspeed">平均值\n(m/s)</string>
    <string name="max_windspeed">最大值\n(m/s)</string>
    <string name="min_windspeed">最小值\n(m/s)</string>
    <string name="average_airpressure">平均值\n(kPa)</string>
    <string name="max_airpressure">最大值\n(kPa)</string>
    <string name="min_airpressure">最小值\n(kPa)</string>
    <string name="average_temperature">平均值\n(℃)</string>
    <string name="max_temperature">最大值\n(℃)</string>
    <string name="min_temperature">最小值\n(℃)</string>
    <string name="average_humidity">平均值\n(%)</string>
    <string name="max_humidity">最大值\n(%)</string>
    <string name="min_humidity">最小值\n(%)</string>
    <string name="monitor_all">所有监测点</string>
    <string name="monitor_single">单个监测点</string>
    <string name="time_type">时间类型\t:</string>
    <string name="inquire">查询</string>
    <string-array name="time_check">
        <item>日数据</item>
        <item>小时数据</item>
    </string-array>
    <string name="select_date">输入日期\t:</string>
    <string name="monitor_all_data">监测点</string>
    <string name="wind_speed_fix">风速\n（m/s）</string>
    <string name="air_pressure_fix">气压\n（kPa）</string>
    <string name="temperature_fix">温度\n(℃)</string>
    <string name="humidity_fix">湿度\n（%）</string>
    <string name="exit">退出程序</string>
    <string name="login_account">注册账号</string>
    <string name="remember_password">记住密码</string>
    <string name="air_monitor">空气质量</string>
    <string name="smoke_monitor">烟尘烟气</string>
    <string name="catering_monitor">餐饮油烟</string>
    <string name="vocs_monitor">VOCs</string>
    <string name="wastewater_monitor">工业企业废水</string>
    <string name="waterquality_monitor">河流断面水质</string>
    <string name="co2">CO2</string>
    <string name="no2">NO2</string>
    <string name="so2">SO2</string>
    <string name="co">CO</string>
    <string name="no">NO</string>
    <string name="o2">O2</string>
    <string name="ben">苯</string>
    <string name="methyben">甲苯</string>
    <string name="doubleben">二甲苯</string>
    <string name="acetic">乙酸乙酯</string>
    <string name="butene">异丁烯</string>
    <string name="back_homepage">返回主菜单</string>
    <string name="getback">返回选择</string>
    <string name="select_place">请选择详细地址</string>
    <string name="place">监测点</string>
    <string name="explain">*说明：展示的数据都为时间段内的平均数值</string>
    <string name="input_account">输入账号：</string>
    <string name="input_password">输入密码：</string>
    <string name="confirm_password">密码确认：</string>
    <string name="showpassword">显示密码</string>
    <string name="register">注册</string>
    <string name="showchart">展示图表</string>
    <string name="nulldata">您所查时间段暂无数据</string>
    <string name="null_internet">糟糕，加载失败~</string>
    <string name="null_internet2">如您确认网络正常，请稍后再进行查询</string>
    <string name="about">关于境辉环保</string>
    <string name="website">查看官网</string>
    <string name="null_internet3">网络不可用，请检查您的网络配置！</string>
    <string name="mylocation">我的位置：</string>
    <string name="map_query">搜地点、查公交、找路线</string>
    <string name="go_off">出发</string>
    <string name="start_navi">开始导航</string>
    <string name="go_from">输入起点</string>
    <string name="go_to">输入终点</string>
    <string name="panorama">全景</string>
    <string name="navi">导航</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tishi1">*\t账号由5到12位字母和数字组成</string>
    <string name="tishi2">*\t密码由6到18位字母和数字组成</string>
    <string name="main_page">主页面</string>
    <string name="exchange">切换</string>
    <string name="more">更多</string>
    <string name="install">设置</string>
    <string name="clean">清理缓存</string>
    <string name="function">功能设置</string>
    <string name="software">软件信息</string>
    <string name="unknow_direction">未知风向</string>
    <string name="more_place">更多地址</string>
    <string name="detail_content">更多详细内容</string>
    <string name="air">空气</string>
    <string name="yanchen">烟尘</string>
    <string name="youyan">油烟</string>
    <string name="vocs">vocs</string>
    <string name="feishui">废水</string>
    <string name="shuizhi">水质</string>
</resources>
