<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="5dp"
        android:background="@drawable/bg_btn_select"
        android:text="@string/register" />

    <Button
        android:id="@+id/regard"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_select"
        android:text="@string/website" />

    <Button
        android:id="@+id/exit"
        android:textSize="14sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_select"
        android:text="@string/exit" />
</LinearLayout>