<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.jinghui.activity.LoginActivity">

    <Button
        android:id="@+id/clickMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:onClick="clickMore"
        android:text="@string/more"

        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clickMore"
        android:layout_centerHorizontal="true"

        android:background="@null"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@mipmap/jinghui" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/accuntEdt"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/bg_edittext"
                android:digits="@string/filter_vcode"
                android:hint="@string/inputaccount"
                android:inputType="textVisiblePassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hintGray"
                android:textCursorDrawable="@drawable/cursor"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/bg_edittext"
                android:digits="@string/filter_vcode"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:maxLength="18"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hintGray"
                android:textCursorDrawable="@drawable/cursor"
                android:textStyle="italic" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/select_column"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/check_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/remember_password"
                android:textSize="14sp" />

            <Button

                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:text="@string/reset"

                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/select_column"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_btn_selecter"
            android:text="@string/input"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>
