<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:padding="20dp">

    <TextView
        android:id="@+id/observation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/observation" />

    <EditText
        android:id="@+id/town_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/observation_tv"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="@string/town"
        android:padding="5dp" />

    <EditText
        android:id="@+id/site_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/town_tv"
        android:layout_toEndOf="@+id/observation_tv"
        android:layout_toLeftOf="@+id/town_tv"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="@string/site"
        android:padding="5dp" />

    <TextView
        android:id="@+id/time_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/observation_tv"
        android:layout_below="@+id/site_tv"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/time_type" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/site_tv"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/time_type"
        android:padding="5dp"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_type"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starttime" />

                <EditText
                    android:id="@+id/dateStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="5dp" />

                <EditText
                    android:id="@+id/timeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="5dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endtime" />

                <EditText
                    android:id="@+id/dateFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"

                    android:padding="5dp" />

                <EditText
                    android:clickable="true"
                    android:id="@+id/timeFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/inquire_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_selecter"
            android:text="@string/inquire" />
    </LinearLayout>
</RelativeLayout>
