<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/history_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/select_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="20sp" />
    </RelativeLayout>


    <RadioGroup
        android:id="@+id/history_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history_header"
        android:orientation="horizontal"
        android:weightSum="6">

        <RadioButton
            android:id="@+id/dust_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/so2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/wind_speed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/no2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/wind_direction_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/airpressure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/co"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/temperature_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/co2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/humidity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radiobtn_subhistory_select"
            android:button="@null"
            android:gravity="center"
            android:text="@string/o2"
            android:textSize="20sp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/history_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/history_btn_container"></FrameLayout>

</RelativeLayout>