<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dp"
    >

    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scroollContainter"
        android:layout_alignTop="@+id/scroollContainter"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/place"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />

    <com.example.jinghui.ui.InterceptScrollContainer
        android:id="@+id/scroollContainter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/textView1"
        android:focusable="false"
        android:gravity="center">

        <com.example.jinghui.ui.MyHScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/date_time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/pm2.5"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/pm10"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/wind_speed_fix"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView6"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/wind_direction"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView7"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/air_pressure_fix"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView8"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/temperature_fix"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/textView9"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/humidity_fix"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />
            </LinearLayout>
        </com.example.jinghui.ui.MyHScrollView>
    </com.example.jinghui.ui.InterceptScrollContainer>


</RelativeLayout>